<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/combustivel_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFuel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvFuel"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/buscar"
        android:onClick="btBuscarOnClick"
        app:layout_constraintStart_toEndOf="@+id/etFuel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFuel2"
        android:layout_width="97dp"
        android:layout_height="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/combustivel_2"
        app:layout_constraintStart_toStartOf="@+id/tvFuel"
        app:layout_constraintTop_toBottomOf="@+id/tvFuel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFuel2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/etFuel"
        app:layout_constraintTop_toBottomOf="@+id/etFuel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btBuscar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/buscar"
        android:onClick="btBuscar2OnClick"
        app:layout_constraintStart_toEndOf="@+id/etFuel2"
        app:layout_constraintTop_toBottomOf="@+id/btBuscar" />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/valor_combustivel_1"
        app:layout_constraintStart_toStartOf="@+id/tvFuel2"
        app:layout_constraintTop_toBottomOf="@+id/tvFuel2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etValue"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/etFuel2"
        app:layout_constraintTop_toBottomOf="@+id/etFuel2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litros"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/valor_combustivel_2"
        app:layout_constraintStart_toStartOf="@+id/tvValue"
        app:layout_constraintTop_toBottomOf="@+id/tvValue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etValue2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/tvValue2"
        app:layout_constraintStart_toStartOf="@+id/etValue"
        app:layout_constraintTop_toBottomOf="@+id/etValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litros"
            tools:text="Litros" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btResult"
        android:layout_width="254dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:text="@string/resultado"
        android:onClick="btResultOnClick"
        app:layout_constraintStart_toStartOf="@+id/tvValue2"
        app:layout_constraintTop_toBottomOf="@+id/tvValue2"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/btResult"
        app:layout_constraintTop_toBottomOf="@+id/btResult"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

